--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,1 +1,23 @@
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  
+    <title>React App</title>
+  </head>
+  <body style="background-color:rgb(169, 171, 173)">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root" > </div>
+
+  </body>
+</html>
